# workspace-tools

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/: index.html
scripts/: install-skills.sh
skills/: _README.md  _board-kit.json  _labels.json  automate.md  board-setup.md  file.md  hub.md  iterate-fast.md  iterate.md  label-sync.md  onboard.md  pr-amend.md
skills/_pipeline/: design.md  explore.md  implement.md  integration-test.md  requirements.md  research.md  test-plan.md
skills/_templates/: DESIGN.md.tmpl  INTEGRATION.md.tmpl  ISSUE_BUG.yml  ISSUE_FEATURE.yml  REQUIREMENTS.md.tmpl  TEST_PLAN.md.tmpl
workspace_tools/: __init__.py  cli.py
workspace_tools/core/: __init__.py  agent.py  git_ops.py  issue.py  pipeline.py  stage.py  state_sink.py
workspace_tools/pipelines/: __init__.py
workspace_tools/stages/: __init__.py
workspace_tools/stages/prompts/: design.md  explore.md  implement.md  instant.md  integration_test.md  requirements.md  research.md  test_plan.md
