[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-tools"
version = "0.1.0"
description = "Deterministic SDD pipeline orchestration for personal agentic workflows"
requires-python = ">=3.11"
authors = [{ name = "Tarun" }]

[project.scripts]
workspace-tools = "workspace_tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["workspace_tools*"]
